added ability to export schema example for connectors to platform
